integ-tests/tests/snapshots/parser__integer_range_positive.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ integer_range_positive:1:5
  │
1 │ a = 9223372036854775808
  │     ^^^^^^^^^^^^^^^^^^^ unable to parse number


